fix:修复了main测试把输入路径作为解压输出路径的逆天问题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ qt_add_executable(HuffmanZip
         FileReaderUtil.h
         BitStreamWriter.cpp
         BitStreamWriter.h
+        BitStreamReader.cpp
+        BitStreamReader.h
 )
 
 target_link_libraries(HuffmanZip
